docs/tests/parser/edge_cases/valid/ComplexForLoop.src
fn void test() {
    for (let int i = 0, j = 10; i < j; i++, j--) {
        let int sum = i + j;
    }
}
