docs/tests/parser/edge_cases/invalid/CastMissingType.src
fn void test() {
    let int x = 5 as;
}
